SET(LIBHELLO_SRC myprint.c)
ADD_LIBRARY(myprint SHARED ${LIBHELLO_SRC})
ADD_LIBRARY(myprint_static STATIC ${LIBHELLO_SRC})
SET_TARGET_PROPERTIES(myprint_static PROPERTIES OUTPUT_NAME "myprint")
SET_TARGET_PROPERTIES(myprint PROPERTIES VERSION 1.2 SOVERSION 1)
INSTALL(TARGETS myprint myprint_static
LIBRARY DESTINATION lib
ARCHIVE DESTINATION lib
)
INSTALL(FILES myprint.h DESTINATION include/myprint)
